--- a/style.css
+++ b/style.css
@@ -40,3 +40,9 @@ ul.topnav li.right {float: right;}
 }
 
 div#preload { display: none; }
+.slide{
+     display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+}
