--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    background-color: black;
+}
 .title{
     background-color: black;
 }
@@ -45,4 +48,5 @@ div#preload { display: none; }
     margin-left: auto;
     margin-right: auto;
     max-width: 100%;
+    padding: 2%
 }
