--- a/style.css
+++ b/style.css
@@ -48,5 +48,5 @@ div#preload { display: none; }
     margin-left: auto;
     margin-right: auto;
     max-width: 100%;
-    margin: 2%
+    padding: 1.2%
 }
