--- a/style.css
+++ b/style.css
@@ -48,9 +48,20 @@ div#preload { display: none; }
     margin-left: auto;
     margin-right: auto;
     max-width: 100%;
-    padding: 2%
+    padding-top: 2%
 }
 .footer{
     color: white;
     text-align: center;
+    background-color: #333;
+    padding : 0.6%;
+    font-weight : bolder;
+}
+.footer a:not(.active){
+    color : black;
+}
+.aboutus{
+    color:white;
+    background-color: #333;
+    text-align: center
 }
